<resources>
    <string name="app_name">Pass</string>

    <!-- Login -->

    <string name="login_serverurl_hint">Server URL</string>
    <string name="login_serverurl_validation_error_empty">Server URL nicht ausgefüllt</string>
    <string name="login_serverurl_validation_error_invalid">Server URL nicht gültig</string>

    <string name="login_username_hint">Benutzername</string>
    <string name="login_username_validation_error_empty">Benutzername nicht ausgefüllt</string>

    <string name="login_password_hint">Passwort</string>
    <string name="login_password_validation_error_empty">Passwort nicht ausgefüllt</string>

    <string name="login_button_text">Anmelden</string>

    <!-- Drawer -->

    <string name="drawer_header_title">Pass Passwortmanager</string>
    <string name="drawer_header_subtitle">android.studio@android.com</string>

    <string name="drawer_open_description">Navigationsdrawer öffnen</string>
    <string name="drawer_close_description">Navigationsdrawer schließen</string>

    <string name="drawer_menu_item_overview">Übersicht</string>
    <string name="drawer_menu_item_settings">Einstellungen</string>
    <string name="drawer_menu_item_about">Über / Lizenz</string>
    <string name="drawer_menu_item_logout">Ausloggen</string>

    <string name="drawer_menu_category_external_links">Externe Links</string>
    <string name="drawer_menu_item_homepage">Sicherheitskritisch.de</string>
    <string name="drawer_menu_item_googleplay">Bewerten auf Google Play</string>

    <!-- About -->

    <string name="about_title">Über / Lizenz</string>

    <string name="about_header">Pass Passwortmanager</string>
    <string name="about_subheader">Version %s (gebaut am %s)</string>
    <string name="about_passage_1">Programmiert von Bastian Raschke</string>

    <!-- Settings -->

    <string name="settings_title">Einstellungen</string>

</resources>
