<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_item_about"
            android:icon="@drawable/icon_home_24dp"
            android:title="@string/drawer_menu_item_about" />
        <item
            android:id="@+id/drawer_menu_item_settings"
            android:icon="@drawable/icon_settings_24dp"
            android:title="@string/drawer_menu_item_settings" />
    </group>

    <item android:title="@string/drawer_menu_category_external_links">
        <menu>
            <item
                android:id="@+id/drawer_menu_item_homepage"
                android:icon="@drawable/icon_home_24dp"
                android:title="@string/drawer_menu_item_homepage" />
            <item
                android:id="@+id/drawer_menu_item_googleplay"
                android:icon="@drawable/icon_starrate_24dp"
                android:title="@string/drawer_menu_item_googleplay" />
        </menu>
    </item>

</menu>
