<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--<FrameLayout-->
    <!--android:id="@+id/frameLayout_root_container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--&lt;!&ndash; Progress screen &ndash;&gt;-->
    <!--<ProgressBar-->
    <!--android:id="@+id/login_progress"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:visibility="gone"-->
    <!--tools:visibility="gone"-->
    <!--/>-->

    <!--&lt;!&ndash; Login screen &ndash;&gt;-->
    <!--<ScrollView-->
    <!--android:id="@+id/login_form"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="@dimen/default_margin_horizontal"
            android:layout_marginStart="@dimen/default_margin_horizontal"
            android:layout_marginTop="@dimen/default_vertical_spacing"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="Logo"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_horizontal"
            android:layout_marginStart="@dimen/default_margin_horizontal"
            android:layout_marginTop="@dimen/default_vertical_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_horizontal"
            android:layout_marginStart="@dimen/default_margin_horizontal"
            android:layout_marginTop="@dimen/default_vertical_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionUnspecified"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_vertical_spacing"
            android:layout_marginEnd="@dimen/default_margin_horizontal"
            android:layout_marginStart="@dimen/default_margin_horizontal"
            android:layout_marginTop="@dimen/default_vertical_spacing"
            android:background="@color/colorPrimary"
            android:text="@string/login_button_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <!--</ScrollView>-->

    <!--</FrameLayout>-->

</layout>